--- a/views/index.haml
+++ b/views/index.haml
@@ -13,10 +13,10 @@
           %label.form-label(for='url') URL
           %input.form-input#url{type: 'text', placeholder: 'URL', name: 'url'}
         .form-group
-          %label.form-label(for='ids') Query of IDs (stq style)
+          %label.form-label(for='ids') Query of IDs (jq style)
           %input.form-input#ids{type: 'text', placeholder: 'Query of IDs', name: 'ids'}
         .form-group
-          %label.form-label(for='titles') Query of Titles (stq style)
+          %label.form-label(for='titles') Query of Titles (jq style)
           %input.form-input#titles{type: 'text', placeholder: 'Query of Titles', name: 'titles'}
         .form-group
           %label.form-label(for='urlbase') Base of URL
