--- a/views/index.haml
+++ b/views/index.haml
@@ -21,6 +21,9 @@
         .form-group
           %label.form-label(for='urlbase') Base of URL
           %input.form-input#urlbase{type: 'text', placeholder: 'Base of URL', name: 'urlbase'}
+        .form-group
+          %label.form-label(for='urlbase') Title of Feed
+          %input.form-input#urlbase{type: 'text', placeholder: 'Title of Feed', name: 'title'}
         %div
           %button.btn.btn-primary Submit
         %div
